fix : loading packaging delays instead cleaning